<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sizebook.MainActivity">

    <TextView
        android:text="@string/welcome_to_sizebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/title"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <Button
        android:text="@string/view_records"
        android:layout_width="wrap_content"
        android:layout_marginTop="107dp"
        android:id="@+id/viewrecords"
        android:width="135dp"
        android:layout_height="75dp"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title" />

    <Button
        android:text="@string/new_record"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="29dp"
        android:id="@+id/newrecord"
        android:width="135dp"
        android:layout_below="@+id/viewrecords"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/viewrecords"
        android:layout_alignEnd="@+id/viewrecords" />
</RelativeLayout>
